# Nautilus-Engine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  TODO.md  build.bat  build.sh  imgui.ini
.github/: CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cmake-multi-platform.yml  linux-build.yml  macos-build.yml  multi-platform-build.yml  windows-build.yml
Assets/Shaders/: basic_fs.glsl  basic_vs.glsl  basic_vs.sc  quad_fs.glsl  quad_vs.glsl  triangle_fs.glsl  triangle_vs.glsl
Nautilus/: CMakeLists.txt
Nautilus/Src/: EntryPoint.h  Nautilus.h  PCH.h
Nautilus/Src/Core/: Application.cpp  Application.h  ApplicationEvent.cpp  ApplicationEvent.h  Codes.h  ControllerEvent.cpp  ControllerEvent.h  Dialogs.cpp  Dialogs.h  Event.cpp  Event.h  Filesystem.cpp  Filesystem.h  IO.cpp  IO.h  Input.cpp  Input.h  KeyEvent.cpp  KeyEvent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseEvent.cpp  MouseEvent.h  String.cpp  String.h  Strings.cpp  Strings.h  Timer.cpp  Timer.h  TouchEvent.cpp  TouchEvent.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Nautilus/Src/GUI/: GUILayer.cpp  GUILayer.h
Nautilus/Src/Math/: Angle.cpp  Angle.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
Nautilus/Src/Renderer/: Buffer.cpp  Buffer.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Nautilus/Src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Nautilus/src/: Nautilus.h  PCH.cpp  PCH.h  Test.cpp  Test.h
Nautilus/src/Nautilus/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Nautilus/src/Nautilus/Core/: Timestep.cpp  Timestep.h
Nautilus/src/Nautilus/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
Nautilus/src/Nautilus/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Nautilus/src/Nautilus/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Nautilus/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
Nautilus/src/Platform/MacOS/: MacOSInput.cpp  MacOSInput.h  MacOSWindow.cpp  MacOSWindow.h
Nautilus/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nautilus/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Reef/: CMakeLists.txt
Reef/Src/: Editor.cpp  Editor.h  Reef.cpp
Reef/Src/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Sandbox/: Build.bat  Build.sh  CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Tidebox/: CMakeLists.txt
Tidebox/Src/: Sandbox.cpp
scripts/: install_linux_deps.sh  install_macos_deps.sh  install_windows_deps.bat  runtime.cmake
